Fix backface flicker in Safari by adding -webkit-backface-visibility: hidden;

--- a/pilatch-card.css
+++ b/pilatch-card.css
@@ -45,6 +45,7 @@ pilatch-card[clickable] {
 }
 
 pilatch-card[known]:not([up]) .pilatch-card_front {
+  -webkit-backface-visibility: visible;
   backface-visibility: visible;
 }
 
@@ -53,6 +54,7 @@ pilatch-card[known]:not([up]) .pilatch-card_back {
 }
 
 pilatch-card .pilatch-card_front {
+  -webkit-backface-visibility: hidden;
   backface-visibility: hidden;
   background-image: url(sprite.png);
   background-size: calc(4100px * 1) calc(1050px * 1);
@@ -62,6 +64,7 @@ pilatch-card .pilatch-card_front {
 }
 
 pilatch-card .pilatch-card_back {
+  -webkit-backface-visibility: hidden;
   backface-visibility: hidden;
   background-image: url(sprite.png);
   background-size: calc(4100px * 1) calc(1050px * 1);
